// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconTabBar Conversation renders correctly when not focused 1`] = `
<View>
  <customIcon
    colour="rgba(51,51,51,0.65)"
    name="envelope"
    size={25}
    solid={true}
  />
</View>
`;

exports[`IconTabBar Feed renders correctly when focused 1`] = `
<View>
  <customIcon
    colour="rgb(51, 51, 51)"
    name="home"
    size={25}
    solid={true}
  />
</View>
`;

exports[`IconTabBar Feedback renders correctly when not focused 1`] = `
<View>
  <customIcon
    colour="rgba(51,51,51,0.65)"
    name="custom-thumbs"
    size={25}
    solid={true}
  />
</View>
`;

exports[`IconTabBar Menu renders correctly when not focused 1`] = `
<View>
  <customIcon
    colour="rgba(51,51,51,0.65)"
    name="bars"
    size={25}
    solid={true}
  />
</View>
`;

exports[`IconTabBar Notification renders correctly when focused 1`] = `
<View>
  <customIcon
    colour="rgb(51, 51, 51)"
    name="bell"
    size={25}
    solid={true}
  />
  <NotificationBadge />
</View>
`;
